# unicart

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
store/: admin.py  models.py  serializers.py  services.py  swagger.py  tests.py  urls.py  views.py
store/tests/: store_tests.py
unicart/: asgi.py  settings.py  urls.py  wsgi.py
