[tool.poetry]
name = "unicart"
version = "0.1.0"
description = "A simple e-commerce platform"
authors = ["Prince Kumar <neo11prince@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.10"
drf-yasg = "^1.21.10"
django-environ = "^0.12.0"


[tool.poetry.dev-dependencies]
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | migrations
)/
'''
preview = true

[tool.isort]
profile = "black"
skip = ["migrations"]
multi_line_output = 0
force_single_line = false
combine_as_imports = true
include_trailing_comma = false
line_length = 120

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"